tests/compile_tests/generics.stderr
error: generics are not supported for IntEnum
 --> $DIR/generics.rs:7:18
  |
7 | pub enum Generics<T> {
  |                  ^
